# HippoShell

./: .gitignore  1  CMakeLists.txt  Readme.md  package.sh
include/: command_runner.h  context.h  ollama_client.h
include/rag/: context_collector.h
src/: command_runner.cpp  context.cpp  main.cpp  ollama_client.cpp
src/rag/: context_collector.cpp
